--- a/src/main/resources/templates/tipoRecomendacion/listTipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/listTipoRecomendacion.html
@@ -53,6 +53,7 @@
 		</div>
 
 	</div>
+	<div th:replace="fragments/nav :: logout" class="row topbar col-lg-12"></div>
 
 
 	<script src="/js/popper.min.js"></script>
