list con estado

--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -52,6 +52,7 @@
 						<th scope="col" class="text-center">Teléfono</th>
 						<th scope="col" class="text-center">Correo</th>
 						<th scope="col" class="text-center">Registro</th>
+						<th scope="col" class="text-center">Estado</th>
 						<th scope="col" class="text-center">Distrito</th>
 						<th scope="col" class="text-center">Rol</th>
 						<th scope="col" class="text-center">Operaciones</th>
@@ -66,6 +67,7 @@
 						<td class="text-center" th:text="${usu.phone}"></td>
 						<td class="text-center" th:text="${usu.email}"></td>
 						<td class="text-center" th:text="${usu.registrationdate}"></td>
+						<td class="text-center" th:text="${usu.enabled}"></td>
 						<td class="text-center" th:text="${usu.distrito.nombreDistrito}"></td>
 						<td class="text-center" th:text="${usu.roles.rol}"></td>
 						<td class="text-center"><a class="btn btn-default btn-sm"
