--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -96,6 +96,18 @@
 									th:selected="(${c.id_role} == *{roles.id_role})"></option>
 							</select>
 						</div>
+						
+						<div class="form-group">
+							<label for="name" class="col-sm-2 col-form-label">Estado:
+							</label>
+							<div class="col-sm-6">
+								<input type="checkbox" th:field="*{enabled}"
+									class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('enabled')}" th:errors="*{enabled}"></small>
+							</div>
+						</div>
 
 
 						<div class="form-group">
@@ -112,7 +124,7 @@
 							<label for="file" class="">Foto:</label>
 							<div class="col-sm-6">
 								<input type="file" name="file" class="form-control"
-									th:text="${users.photo}" />
+									th:text="${users.photo}" value="*${users.photo}"/>
 							</div>
 
 						</div>
