--- a/src/main/resources/templates/distrito/distrito.html
+++ b/src/main/resources/templates/distrito/distrito.html
@@ -57,6 +57,7 @@
 
 		</div>
 	</div>
+	<div th:replace="fragments/nav :: logout" class="row topbar col-lg-12"></div>
 
 
 	<script src="/js/popper.min.js"></script>
