--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -65,7 +65,7 @@
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
 
-			<div class="panelitem">
+			<div sec:authorize="hasRole('ROLE_ADMIN')"  class="panelitem">
 				<a th:href="@{/tipousuarios/list}"> <i
 					class="fa fa-address-book" style="color: #CDB02B;"></i>
 				</a>
