--- a/src/main/resources/templates/tienda/tienda.html
+++ b/src/main/resources/templates/tienda/tienda.html
@@ -92,13 +92,13 @@
 							</select>
 						</div>
 
-						
+
 
 						<div class="form-group">
 							<label for="fechaTienda">Fecha Registro:</label> <input
-								type="date"  required th:field="*{fechaRegistro}"
-								id="start" name="trip-start" 
-								value="*{fechaRegistro}" min="2018-01-01" max="2058-12-31">
+								type="date" required th:field="*{fechaRegistro}" id="start"
+								name="trip-start" value="*{fechaRegistro}" min="2018-01-01"
+								max="2058-12-31">
 						</div>
 						<div class="alert alert-danger"
 							th:if="${#fields.hasErrors('fechaRegistro')}"
@@ -127,6 +127,7 @@
 
 		</div>
 	</div>
+	<div th:replace="fragments/nav :: logout" class="row topbar col-lg-12"></div>
 
 
 	<script src="/js/popper.min.js"></script>
