listo, envia xd

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -114,7 +114,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Los sentimos , NO tienes permisos
 								para acceder a este recurso.</h5>
-							<a th:href="@{/marca/list}" class="btn btn-outline-danger"
+							<a th:href="@{/welcome/bienvenido}" class="btn btn-outline-danger"
 								role="button">Ir al inicio</a>
 
 						</div>
