--- a/src/main/resources/templates/bienvenido.html
+++ b/src/main/resources/templates/bienvenido.html
@@ -26,7 +26,9 @@
 		<div th:replace="fragments/nav :: nav" class="row topbar col-lg-12"></div>
 
 		<div class="container">
-			<h3 class="title-content">Bienvenid@ </h3>
+			<h3 class="title-content">¡Te damos la bienvenid@, 
+			<span th:text="${#authentication.getPrincipal().getUsername()}"></span> !
+			</h3>
 
 			<form id="myform">
 				<div class="row clearfix">
