--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -2556,15 +2556,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-warning {
-  color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  color: #FFFFFF;
+  background-color: #2D9BF0;
+  border-color: #2D9BF0;
 }
 
 .btn-warning:hover {
-  color: #212529;
-  background-color: #e0a800;
-  border-color: #d39e00;
+  color: #FFFFFF;
+  background-color: #001495;
+  border-color: #001495;
 }
 
 .btn-warning:focus, .btn-warning.focus {
@@ -2572,9 +2572,9 @@ fieldset:disabled a.btn {
 }
 
 .btn-warning.disabled, .btn-warning:disabled {
-  color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  color: #FFFFFF;
+  background-color: #001495;
+  border-color: #001495;
 }
 
 .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
