--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -43,12 +43,13 @@
 							<label for="nombre">Username:</label> <input type="text" required
 								th:field="*{username}" class="form-control" id="nombre"></input>
 						</div>
+						<div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error}"></div>
 						<div class="alert alert-danger"
 							th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
 
 
 						<div class="form-group">
-							<label for="tContrasena">Contraseña:</label> <input type="password"
+							<label for="tContrasena">Contraseña:</label> <input type="text"
 								required th:field="*{password}" class="form-control"
 								id="tContrasena"></input>
 						</div>
@@ -129,7 +130,7 @@
 						<div class="form-group">
 							<label for="file" class="">Foto:</label>
 							<div class="col-sm-6">
-								<input type="file" name="file" class="form-control"
+								<input type="file" required name="file"  class="form-control"
 									th:text="${users.photo}" />
 							</div>
 
