--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -131,7 +131,8 @@
 							<label for="file" class="">Foto:</label>
 							<div class="col-sm-6">
 								<input type="file" required name="file"  class="form-control"
-									th:text="${users.photo}" />
+									th:text="${users.photo}"
+									accept=".jpg,.png,.jpeg" />
 							</div>
 
 						</div>
