--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -119,7 +119,7 @@
 
 						<div class="form-group">
 							<label for="fechaUsuario">Fecha Registro:</label> <input
-								type="date" required th:field="*{registrationdate}"
+								type="date" readonly th:field="*{registrationdate}"
 								id="fechaUsuario" name="trip-start" value="*{registrationdate}"
 								min="2018-01-01" max="2058-12-31">
 						</div>
