--- a/src/main/resources/templates/marca/listMarca.html
+++ b/src/main/resources/templates/marca/listMarca.html
@@ -28,10 +28,10 @@
 
 				<h3 class="title-content">Lista de Marcas</h3>
 				<form th:action="@{/marca/search}" method="post"
-					th:object="${marca}">
+					th:object="${companies}">
 					<label for="nameMarca">Buscar:</label> <input type="text"
 						required="required" class="form-control"
-						th:field="*{nMarca}" id="nameMarca"></input>
+						th:field="*{nameCompany}" id="nameMarca"></input>
 					<button type="submit" class="btn btn-danger">Buscar</button>
 					<a href="/marca/list" class="btn btn-light">Limpiar</a>
 				</form>
@@ -48,15 +48,15 @@
 				</thead>
 				<tbody>
 					<tr th:each="cat : ${listaMarcas}">
-						<td class="text-center" th:text="${cat.idMarca}"></td>
-						<td class="text-center" th:text="${cat.nMarca}"></td>
-						<td class="text-center" th:text="${cat.urlMarca}"></td>
+						<td class="text-center" th:text="${cat.id_company}"></td>
+						<td class="text-center" th:text="${cat.nameCompany}"></td>
+						<td class="text-center" th:text="${cat.urlCompany}"></td>
 
 						<td class="text-center"><a class="btn btn-default btn-sm"
-							th:href="@{'/marca/update/' + ${cat.idMarca}}"> <i
+							th:href="@{'/marca/update/' + ${cat.id_company}}"> <i
 								class="fa fa-cog"></i> Update
 						</a> <a class="btn btn-danger"
-							th:href="@{/marca/delete?id=}+${cat.idMarca}"> <i
+							th:href="@{/marca/delete?id=}+${cat.id_company}"> <i
 								class="fa fa-trash-o fa-lg"></i> Delete
 						</a></td>
 
