--- a/src/main/resources/templates/Tipoua/listTipouas.html
+++ b/src/main/resources/templates/Tipoua/listTipouas.html
@@ -39,11 +39,11 @@
 				</thead>
 				<tbody>
 					<tr th:each="cat : ${listaTipouas}">
-						<td class="text-center" th:text="${cat.idTipoua}"></td>
-						<td class="text-center" th:text="${cat.nameTipoua}"></td>
+						<td class="text-center" th:text="${cat.id}"></td>
+						<td class="text-center" th:text="${cat.type}"></td>
 						<td class="text-center">
-							<a class="btn btn-default btn-sm" th:href="@{'/tipouas/update/' + ${cat.idTipoua}}"> <i class="fa fa-cog"></i> Update </a> 
-							<a class="btn btn-danger" th:href="@{/tipouas/delete?id=}+${cat.idTipoua}"> <i class="fa fa-trash-o fa-lg"></i> Delete </a>
+							<a class="btn btn-default btn-sm" th:href="@{'/tipouas/update/' + ${cat.id}}"> <i class="fa fa-cog"></i> Update </a> 
+							<a class="btn btn-danger" th:href="@{/tipouas/delete?id=}+${cat.id}"> <i class="fa fa-trash-o fa-lg"></i> Delete </a>
 						</td>
 					</tr>
 				</tbody>
