--- a/src/main/resources/templates/hardware/hardware.html
+++ b/src/main/resources/templates/hardware/hardware.html
@@ -89,7 +89,15 @@
 							</select>
 						</div>
 
-
+						<div class="form-group">
+							<label for="fechaTienda">Fecha Registro:</label> <input
+								type="date" required th:field="*{fecha}" id="start"
+								name="trip-start" value="*{fecha}" min="2018-01-01"
+								max="2058-12-31">
+						</div>
+						<div class="alert alert-danger"
+							th:if="${#fields.hasErrors('fecha')}"
+							th:errors="*{fecha}"></div>
 
 						<!--  <div class="form-group">
 							<label for="fechaTienda">FECHA REGISTRO:</label> <input
