--- a/src/main/resources/templates/tipoModular/tipoModular.html
+++ b/src/main/resources/templates/tipoModular/tipoModular.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="col-8 frm-registro">
 				<form th:action="@{/tipomodulares/save}" method="post"
-					th:object="${tipomodular}">
+					th:object="${tipoModular}">
 					<div class="form-group">
 						<label>ID:</label> <input type="text" class="form-control"
 							readonly th:field="*{idTipoModular}"></input>
