--- a/src/main/resources/templates/tipoUsuario/tipoUsuario.html
+++ b/src/main/resources/templates/tipoUsuario/tipoUsuario.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="col-8 frm-registro">
 				<form th:action="@{/tipousuarios/save}" method="post"
-					th:object="${tipousuario}">
+					th:object="${tipoUsuario}">
 					<div class="form-group">
 						<label>ID:</label> <input type="text" class="form-control"
 							readonly th:field="*{idTipousuario}"></input>
