Revert "Merge branch 'master' of https://github.com/Leslie144/IdealPC"
This reverts commit 9d7b4024d21c260f11ece4b1a4e5130bffea5256, reversing
changes made to c816d8b0e8e53dc85e11b10ae65e97fbc5fe8ab1.

--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -49,7 +49,7 @@
 
 
 						<div class="form-group">
-							<label for="tContrasena">Contraseña:</label> <input type="password"
+							<label for="tContrasena">Contraseña:</label> <input type="text"
 								required th:field="*{password}" class="form-control"
 								id="tContrasena"></input>
 						</div>
