--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -79,7 +79,7 @@
 			</div>
 
 			<div class="panelitem">
-				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-wrench"
+				<a th:href="@{/modulartypes/list}"> <i class="fa fa-wrench"
 					style="color: #2BCD88;"></i>
 				</a>
 				<p>Tipo Modular</p>
