--- a/src/main/resources/templates/hardware/listHardware.html
+++ b/src/main/resources/templates/hardware/listHardware.html
@@ -60,7 +60,7 @@
 						<td class="text-center" th:text="${p.nombreHardware}"></td>
 						<td class="text-center" th:text="${p.modeloHardware}"></td>
 						<td class="text-center" th:text="${p.precioHardware}"></td>
-						<td class="text-center" th:text="${p.marca.nMarca}"></td>
+						<td class="text-center" th:text="${p.companies.nameCompany}"></td>
 						<td class="text-center"><a class="btn btn-default btn-sm"
 							th:href="@{'/hardware/update/' + ${p.idHardware}}"> <i
 								class="fa fa-cog"></i> Update
