--- a/src/main/resources/templates/Tipoua/tipoua.html
+++ b/src/main/resources/templates/Tipoua/tipoua.html
@@ -34,7 +34,7 @@
 					th:object="${tipoua}">
 					<div class="form-group">
 						<label>ID:</label> <input type="text" class="form-control"
-							readonly th:field="*{id}"></input>
+							readonly th:field="*{id_ua}"></input>
 
 						<div class="form-group">
 							<label for="type">Tipo:</label> <input type="text" required
