--- a/src/main/resources/templates/tipoModular/tipoModular.html
+++ b/src/main/resources/templates/tipoModular/tipoModular.html
@@ -33,14 +33,14 @@
 					th:object="${tipomodular}">
 					<div class="form-group">
 						<label>ID:</label> <input type="text" class="form-control"
-							readonly th:field="*{idTipoModular}"></input>
+							readonly th:field="*{id_modular}"></input>
 
 						<div class="form-group">
-							<label for="tipo">Tipo:</label> <input type="text" required
-								th:field="*{nTipoModular}" class="form-control" id="tipo"></input>
+							<label for="type">Tipo:</label> <input type="text" required
+								th:field="*{type}" class="form-control" id="type"></input>
 							<div class="alert alert-danger"
-								th:if="${#fields.hasErrors('nTipoModular')}"
-								th:errors="*{nTipoModular}"></div>
+								th:if="${#fields.hasErrors('type')}"
+								th:errors="*{type}"></div>
 
 						</div>
 
