--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,9 +28,9 @@
 				</a>
 				<p>Inicio</p>
 			</div>
-			<div sec:authorize="hasRole('ROLE_ADMIN')"  class="panelitem">
-				<a th:href="@{/usuario/list}"> <i
-					class="fa fa-user-circle-o" style="color: #CD2B2B;"></i>
+			<div sec:authorize="hasRole('ROLE_ADMIN')" class="panelitem">
+				<a th:href="@{/usuario/list}"> <i class="fa fa-user-circle-o"
+					style="color: #CD2B2B;"></i>
 				</a>
 				<p>Usuarioㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
@@ -65,7 +66,7 @@
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
 
-			<div sec:authorize="hasRole('ROLE_ADMIN')"  class="panelitem">
+			<div sec:authorize="hasRole('ROLE_ADMIN')" class="panelitem">
 				<a th:href="@{/tipousuarios/list}"> <i
 					class="fa fa-address-book" style="color: #CDB02B;"></i>
 				</a>
@@ -103,6 +104,14 @@
 					class="fa fa-star" style="color: #D6D010;"></i>
 				</a>
 				<p>Tipo de Recomendacion</p>
+			</div>
+
+
+			<div class="panelitem">
+				<a th:href="@{/usuario/reportes}"> <i
+					class="fa fa-star" style="color: #D6D010;"></i>
+				</a>
+				<p>Reportes</p>
 			</div>
 		</div>
 	</div>
