--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 					<div class="col-sm-6">
 						<img th:src="@{/img/logo/logo3.png}" height="35%" width="35%" />
 					</div>
-					
+
 					<div class="col-sm-6">
 						<input type="text" name="username" id="username"
 							class="form-control" placeholder="Usuario" autofocus required />
@@ -34,6 +34,8 @@
 							value="Ingresar" />
 					</div>
 				</form>
+				<a th:href="@{/usuario/createAccount}" class="btnnew btn btn-danger">Nuevo</a>
+			
 
 			</div>
 		</div>
