--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -57,7 +57,7 @@
 							th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
 
 						<div class="form-group">
-							<label for="tTelefono">Teléfono:</label> <input type="text"
+							<label for="tTelefono">Teléfono:</label> <input type="number"
 								required th:field="*{phone}" class="form-control" id="tTelefono"></input>
 						</div>
 						<div class="alert alert-danger"
