--- a/src/main/resources/templates/hardware/hardware.html
+++ b/src/main/resources/templates/hardware/hardware.html
@@ -82,10 +82,10 @@
 					<div class="col-6">
 						<div class="form-group">
 							<label for="marca">Marca:</label> <select class="form-control"
-								th:field="*{marca.idMarca}">
-								<option th:each="c: ${listaMarcas}" th:value="${c.idMarca}"
-									th:text="${c.nMarca}"
-									th:selected="(${c.idMarca} == *{marca.idMarca})"></option>
+								th:field="*{companies.id_company}">
+								<option th:each="c: ${listaMarcas}" th:value="${c.id_company}"
+									th:text="${c.nameCompany}"
+									th:selected="(${c.id_company} == *{companies.id_company})"></option>
 							</select>
 						</div>
 
@@ -96,8 +96,7 @@
 								max="2058-12-31">
 						</div>
 						<div class="alert alert-danger"
-							th:if="${#fields.hasErrors('fecha')}"
-							th:errors="*{fecha}"></div>
+							th:if="${#fields.hasErrors('fecha')}" th:errors="*{fecha}"></div>
 
 						<!--  <div class="form-group">
 							<label for="fechaTienda">FECHA REGISTRO:</label> <input
