--- a/src/main/resources/templates/reports/reports.html
+++ b/src/main/resources/templates/reports/reports.html
@@ -79,10 +79,9 @@
 											Reporte</a>
 									</div>
 									<div class="cproyecto ">
-										<h3 class="tproyecto ">Categorías Frecuentes</h3>
-										<p class="dproyecto ">Lista de las categorías con más
-											frecuencia en las órdenes</p>
-										<a class="lnikp " th:href="@{/categories/reporte3}">Ver
+										<h3 class="tproyecto ">Marca mas activa</h3>
+										<p class="dproyecto ">Lista de los hardwares registrados por la marca mas activa el ultimo mes</p>
+										<a class="lnikp " th:href="@{/hardware/reporte4}">Ver
 											Reporte</a>
 									</div>
 									<!--  <div class="cproyecto " style="opacity: 0;">
